refactor: 복잡한 코드 및 구조 개선
