# internal/jobs/routes.go
@@ -1,0 +1,16 @@
+package jobs
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/miniyus/gofiber/app"
+)
+
+const Prefix = "worker"
+
+func Register(handler Handler) app.SubRouter {
+	return func(router fiber.Router) {
+		router.Get("/status", handler.Status)
+		router.Get("/:worker/jobs", handler.GetJobs)
+		router.Get("/:worker/jobs/:job", handler.GetJob)
+	}
+}
